[tool.poetry]
name = "Client_API_VN"
version = "3.0.0rc1"
description = "Python API to Biolovision API and applications using it."
authors = ["Daniel Thonon <d.thonon9@outlook.com>"]
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: POSIX :: Linux",
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

packages = [
  { include = "biolovision", from = "src" },
  { include = "export_vn", from = "src" },
  { include = "schemas", from = "src" },
  { include = "update_vn", from = "src" },
]

[tool.poetry.urls]
Repository = "https://github.com/dthonon/Client_API_VN"
Documentation = "https://dthonon.github.io/Client_API_VN/"
Issues = "https://github.com/dthonon/Client_API_VN/issues"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
alembic = ">=1.14"
apscheduler = "<4"
beautifulsoup4 = ">=4.12"
click = ">=8.1"
dynaconf = ">=3.2"
jinja2 = ">=3.1"
jsonschema = ">=4.23"
psutil = ">=6.1"
psycopg2-binary = ">=2.9"
pyproj = ">=3.7"
pytz = ">=2024"
requests = ">=2.32"
requests-oauthlib = ">=2.0"
SQLAlchemy = "<2"
strictyaml = ">=1.7"
tabulate = ">=0.9"
yappi = ">=1.6"
babel = ">=2.16"
tomlkit = ">=0.13"
pyyaml = ">=6.0"

[tool.poetry.group.dev.dependencies]
deptry = ">=0.20"
mypy = ">=1.5"
pytest = ">=8"
pytest-cov = ">=5"
pytest-order = ">=1.3"
pre-commit = ">=4"
tox = ">=4"
types-requests = ">=2.32"
types-requests-oauthlib = ">=2"
types-setuptools = ">=75"
types-psutil = ">=6.1"
types-tabulate = ">=0.9"
types-beautifulsoup4 = ">=4.12"
types-pytz = ">=2024.2"
types-psycopg2 = ">=2.9"

[tool.poetry.group.docs.dependencies]
mkdocs = ">=1.6"
mkdocs-material = ">=9"
mkdocstrings = { extras = ["python"], version = ">=0.26" }
Pygments = ">=2.18"

[tool.poetry.scripts]
config_file = "template.convert_config:run"
transfer_vn = "export_vn.transfer_vn:run"
update_vn = "update_vn.update_vn:run"
validate_vn = "schemas.validate_vn:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["src"]
ignore_errors = true
# disallow_untyped_defs = "True"
# disallow_any_unimported = "True"
# no_implicit_optional = "True"
# check_untyped_defs = "True"
# warn_return_any = "True"
# warn_unused_ignores = "True"
# show_error_codes = "True"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.flake8]
builtins = ["_"]

[tool.black]
line-length = 119

[tool.ruff]
include = ["pyproject.toml", "src/*/*.py"]
target-version = "py312"
line-length = 119
builtins = ["_"]
fix = true
lint.select = [
  # flake8-2020
  "YTT",
  # flake8-bandit
  "S",
  # flake8-bugbear
  "B",
  # flake8-builtins
  "A",
  # flake8-comprehensions
  "C4",
  # flake8-debugger
  "T10",
  # flake8-simplify
  "SIM",
  # isort
  "I",
  # mccabe
  "C90",
  # pycodestyle
  "E",
  "W",
  # pyflakes
  "F",
  # pygrep-hooks
  "PGH",
  # pyupgrade
  "UP",
  # ruff
  "RUF",
  # tryceratops
  "TRY",
]
lint.ignore = [
  # LineTooLong
  "E501",
  # DoNotAssignLambda
  "E731",
  # Using $HOME/tmp is safe
  "S108",
  # Using exec limited in update_vn
  "S102",
  # List required
  "C400",
  # Complexity: too much refactoring needed
  "C901",
  # lru_cache memory leak is not an issue on time limited scripts
  "B019",
]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["src"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.deptry]
known_first_party = ["biolovision", "export_vn"]

[tool.deptry.per_rule_ignores]
DEP002 = ["babel"]
