[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE
name = export_vn
author = Daniel Thonon
author_email = d.thonon9@gmail.com
description = Transfer data from VisioNature web site to Postgresql database
long_description = file: README.md
long_description_content_type = text/markdown
url = https://framagit.org/lpo/Client_API_VN
classifiers =
    Programming Language :: Python :: 3.5
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
zip_safe = False
package_dir =
 =src
packages = find:
python_requires = >=3.5
install_requires =
    docutils
    beautifulsoup4
    psycopg2-binary
    pyexpander
    pyproj
    pyYAML
    requests
    requests-oauthlib
    setuptools_scm
    SQLAlchemy
    tabulate
    xmltodict
setup_requires = 
    setuptools_scm >= 1.15.0
    Babel >= 2.6.0

[options.packages.find]
where = src

[options.package_data]
export_vn = 
    data/evn_template.yaml
    locale/*/LC_MESSAGES/*.mo

[options.extras_require]
testing =
	# upstream
	pytest >= 3.5, !=3.7.3
	pytest-checkdocs
	pytest-flake8
	# local

docs =
	# upstream
	sphinx
	#jaraco.packaging >= 3.2
	#rst.linker >= 1.9
	# local

[options.entry_points]

[extract_messages]
output_file = src/export_vn/locale/export_vn.pot
input-dirs = src/export_vn
copyright-holder = LPO Auvergne-Rhône-Alpes 

[init_catalog]
input_file = src/export_vn/locale/export_vn.pot
output_dir = src/export_vn/locale/
domain = export_vn

[update_catalog]
input_file = src/export_vn/locale/export_vn.pot
output_dir = src/export_vn/locale/
domain = export_vn
no-fuzzy-matching = 1

[compile_catalog]
directory = src/export_vn/locale/
domain = export_vn
statistics = 1
